--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ body {
 .main {
     width: 100%;
     margin: 0 auto;
-    padding: 10px;
     background-color: #F1F1F1;
     color: #333;
 }
@@ -499,7 +498,7 @@ i {
   /* *****************************************testimonial**************************************** */
   
   .reviews {
-    height: 50vh;
+    min-height: 50vh;
     display: flex;
     align-items: center;
     justify-content: center;
