--- a/style.css
+++ b/style.css
@@ -18,8 +18,6 @@ body {
 /* Main Container */
 .main {
     width: 100%;
-    margin: 0 auto;
-    padding: 10px;
     background-color: #F1F1F1;
     color: #333;
 }
@@ -245,6 +243,7 @@ i {
 .services {
     width: 100%;
     position: relative;
+    overflow: hidden;
 }
 
 .services h1 {
@@ -305,10 +304,17 @@ i {
         font-size: 6vh;
     }
     .services .servicesBox .leftservicebox{
-        width: 50%;
+        width: 20%;
     }
+    
     .services .servicesBox .rightservicebox{
-        width: 50%;
+        width: 80%;
+    }
+    .services .servicesBox .leftservicebox1{
+        width: 80%;
+    }
+    .services .servicesBox .rightservicebox1{
+        width: 20%;
     }
     .services .servicesBox img{
         width: 200px;
@@ -344,6 +350,7 @@ i {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    width: 100%;
     justify-content: center;
     min-height: 80vh;
     margin: 0;
@@ -485,7 +492,7 @@ i {
   
   @media (max-width: 768px) {
     .number h1 {
-      font-size: 4rem; /* Adjust font size for smaller screens */
+      font-size: 3rem; /* Adjust font size for smaller screens */
     }
   
     .numtext {
